# mqlens-mongodb

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: compose-latest.cjs
.github/workflows/: ci.yml  release.yml  website.yml
docs/: ROADMAP.md  demo-database.md  mcp-tools.md
fixtures/: mcp-tools-golden.json  workspace-golden.json
scripts/: seed-demo-data.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  biometric.rs  command_coverage.rs  connections.rs  integration_tests.rs  lib.rs  limits.rs  mcp.rs  mcp_tools.rs  mock_db.rs  monitoring.rs  path_env.rs  queries.rs  server_client.rs  ssh_tunnel.rs  state.rs  tests.rs  toolsetup.rs  updater.rs  vault.rs  window.rs  windows.rs  workspace.rs  write_guard.rs
src-tauri/src/db/: aggregate.rs  copy.rs  ddl.rs  documents.rs  export.rs  generate.rs  generate_golden.ejson.txt  gridfs.rs  import.rs  metadata.rs  mod.rs  mongotools.rs  query.rs  schema.rs  stats.rs  tasks.rs  users.rs  version.rs
src-tauri/src/db/export/: csv.rs  json.rs  mod.rs  options.rs  xlsx.rs
src/components/: AIChatPanel.tsx  ChartView.tsx  ClusterHealthCard.tsx  CommandPalette.tsx  ConnectionCard.tsx  ConnectionManager.tsx  ContextMenu.tsx  CopyToDialog.tsx  CreateViewView.tsx  DataGrid.tsx  DocumentDiffModal.tsx  DocumentEditModal.tsx  DocumentViewer.tsx  DumpView.tsx  ExportView.tsx  FindQueryBar.tsx  GenerateView.tsx  GridFsView.tsx  ImportView.tsx  IndexModal.tsx  IndexViewer.tsx  KeyboardShortcutsSettings.tsx  MongoShell.tsx  MonitoringView.tsx  PasswordInput.tsx  QueryEditor.tsx  QueryInput.tsx  QuickStart.tsx  RestoreView.tsx  SchemaView.tsx  SettingsModal.tsx  Sidebar.tsx  StatsCards.tsx  TaskManager.tsx  ToolSetupDialog.tsx  UpdatePrompt.tsx  UserManagementView.tsx  ValidationRulesView.tsx  VaultGate.tsx
src/components/__tests__/: AIChatPanel.test.tsx  App.test.tsx  AppSecondaryWindow.test.tsx  ChartView.test.tsx  ClusterHealthCard.test.tsx  CommandPalette.test.tsx  ConnectionCard.test.tsx  ConnectionManager.test.tsx  ContextMenu.test.tsx  CopyToDialog.test.tsx  CreateViewView.test.tsx  DataGrid.test.tsx  DialogProvider.test.tsx  DocumentDiffModal.test.tsx  DocumentEditModal.test.tsx  DocumentViewer.test.tsx  DumpView.test.tsx  ExportView.test.tsx  GenerateView.test.tsx  GridFsView.test.tsx  ImportView.test.tsx  IndexModal.test.tsx  IndexViewer.test.tsx  MongoShell.test.tsx  MonitoringView.test.tsx  PasswordInput.test.tsx  QueryEditor.test.tsx  QueryInput.test.tsx  QuickStart.test.tsx  RestoreView.test.tsx  SchemaView.test.tsx  SettingsMcp.test.tsx  SettingsModal.test.tsx  Sidebar.test.tsx  StatsCards.test.tsx  TaskManager.copy.test.tsx  TaskManager.test.tsx  ToolSetupDialog.test.tsx  UpdatePrompt.test.tsx  UserManagementView.test.tsx  (+2 more)
src/components/dialogs/: DialogModal.tsx  DialogProvider.tsx  ToastStack.tsx
src/components/layout/: AppShell.tsx  StatusBar.tsx  WorkspaceTabBar.tsx
src/components/theme/: AppearanceSettings.tsx  ThemePicker.tsx  (+2 more)
src/hooks/: use-theme.ts
src/lib/: aggregateWriteStage.ts  chartData.ts  clusterHealth.ts  collectionSelection.ts  connection.ts  connectionColors.ts  connectionFolders.ts  dataTransfer.ts  docDiff.ts  ejsonView.ts  exportPng.ts  favoriteItems.ts  format.ts  fuzzyMatch.ts  generateTemplate.ts  gridfsUpload.ts  indexSuggestions.ts  mcpApi.ts  monacoAppTheme.ts  monacoMongo.ts  mongoCommand.ts  mongoCompletions.ts  monitoringApi.ts  paletteIndex.ts  pinnedCollections.ts  queryCodeGen.ts  queryStore.ts  quickStartUtils.ts  shellDoc.ts  shortcuts.ts  typedNameConfirm.ts  updateCheckState.ts  useCollectionSchema.ts  useDraggableDialog.ts  useEscapeClose.ts  useMonacoTheme.ts  usersApi.ts  vault.ts
src/styles/: globals.css
src/test/: render-with-providers.tsx  setup.ts
src/workspace/: PaneView.tsx  ReconnectBanner.tsx  WorkspaceRoot.tsx  collectionTabs.ts  model.ts  persistence.ts  tabId.ts  workspaceStore.ts
website/: astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  KEYS  demo.webm  robots.txt
website/src/: consts.ts
(+88 files in other folders)
