[package]
name = "tauri-app"
version = "0.9.1"
description = "MQLens — a native desktop GUI for MongoDB."
authors = ["Devesh Kumar <vrshu112@gmail.com>"]
license = "Apache-2.0"
homepage = "https://mqlens.com"
repository = "https://github.com/mqlens/mqlens-mongodb"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-biometry = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
mongodb = { version = "3.0.0", features = ["aws-auth", "gssapi-auth"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
russh = "0.61.1"
sysinfo = "0.38.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
rust_xlsxwriter = "0.96.0"
tempfile = "3.27.0"
sha2 = "0.11.0"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"

[dev-dependencies]
tiny_http = "0.12.0"

